--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" type= "text/css" href="./assets/css/style.css">
-    <title>Horiseon</title>
+    <title>HoriSEOn</title>
 </head>
 
 <body>
     <div class="header">
-        <h1>Hori<span class="seo">seo</span>n</h1>
+        <header>Hori<span class="seo">seo</span>n</header>
         <div>
             <ul>
                 <li>
@@ -28,7 +28,7 @@
     <div class="content">
         <div class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Notebook with cartoons that describes SEO and its characteristics"></img>
-            <h2>Search Engine Optimization</h2>
+            <h1>Search Engine Optimization</h1>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
@@ -42,7 +42,7 @@
         </div>
         <div id="social-media-marketing" class="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="Co-workers gathered around a table that is covered in graphics describing aspects of social media" ></img>
-            <h2>Social Media Marketing</h2>
+            <h3>Social Media Marketing</h3>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
@@ -50,21 +50,21 @@
     </div>
     <div class="benefits">
         <div class="benefit-lead">
-            <h3>Lead Generation</h3>
+            <h4>Lead Generation</h4>
             <img src="./assets/images/lead-generation.png" alt= "An icon showing half a sun pointing towards a dollar sign"></img>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
         <div class="benefit-brand">
-            <h3>Brand Awareness</h3>
+            <h5>Brand Awareness</h5>
             <img src="./assets/images/brand-awareness.png" alt="An icon showing a person who's head is a lightbulb"></img>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
         <div class="benefit-cost">
-            <h3>Cost Management</h3>
+            <h6>Cost Management</h6>
             <img src="./assets/images/cost-management.png" alt="An icon with three dollar signs merged with a gear"></img>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
@@ -72,7 +72,7 @@
         </div>
     </div>
     <div class="footer">
-        <h2>Made with ❤️️ by Horiseon</h2>
+        <footer>Made with ❤️️ by Horiseon</footer>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
