Adding descriptive title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" type= "text/css" href="./assets/css/style.css">
-    <title>HoriSEOn</title>
+    <title>HoriSEOn: Your Guide to SEO, Online Reputation Management, and Social Media Marketing</title>
 </head>
 
 <body>
